--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -255,7 +255,7 @@ iframe {
   width: 100%;
   height: 100%;
   /*background-color: #808B96;*/
-  background-image: url(../img/header.jpg);
+  background-image: url(../img/img_header.jpg);
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
