--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,9 +5,9 @@
             <h2>About Me</h2>
             <hr class="intro-divider">
             <br/>
-                <p><font size="4px"> I am Plant Biologist, fascinated with plant physiology, molecular biology, and computational science. </font></p>
-                <p><font size="4px"> I earned my Ph.D. in Genetics from the Federal University of Rio de Janeiro (2016). The main goal was to integrate plant biology and bioinformatics focusing on the study the differentially expressed genes under drought condition and on identifying mechanisms of response to this stress in castor beans. </font></p>
-                <p><font size="4px"> After a year and a half working in a private company in Brazil, I joined <a href="http://girke.bioinformatics.ucr.edu/">Professor Thomas Girke Lab</a> at <a href="https://www.ucr.edu/">UCR</a> in 2017. My current research focuses on the development of computational <a href="http://girke.bioinformatics.ucr.edu/systemPipeR/">data analysis</a> methods for genome biology. My main interests are the development of integrated systems for NGS data analysis for R and Bioconductor open source software projects. The following gives a short summary of my career and the current projects.</font></p>
+                <p><font size="4px"> System Analyst with 5+ years of experience in developing system improvements, identifying bottlenecks and proposing solutions. Knowledge in Transact-SQL. Experience working on parameterization, analysis and implementation of ERP system and Oracle Database (PL/SQL) making system requirements become technical solutions to support business needs. </font></p>
+                <p><font size="4px"> I have a Bachelor's degree in Computer Science from UECE and I'm passionate about technologies and things related to IT. </font></p>
+                <p><font size="4px"> Currently, I'm improving knowledge in Data Science and Data Engineering and I'm initiating Graduate School studies at PUCRS. </font></p>
                 
              <br/>
         </div>
