--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,9 @@
 		{% include about.html %}
 		{% include education.html %}
 		{% include experiences.html %}
-		{% include projects.html %}
-		{% include publication.html %}
+		{% include hobbies.html %}
+		#{% include projects.html %}
+		#{% include publication.html %}
 		{% include contact.html %}
 		{% include footer.html %}
 		{% include js.html %}
