--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,9 +20,14 @@
                         <a class="page-scroll" href="#experiences">Experiences</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
+                     <li>
+                        <a class="page-scroll" href="#hobbies">Hobbies</a>
+                    </li>
+                    <!--
                     <li>
                         <a class="page-scroll" href="#projects">Projects</a>
                     </li>
+                    -->
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
