--- a/_includes/publication.html
+++ b/_includes/publication.html
@@ -1,5 +1,6 @@
+<!--
 <section id="publication">
-<!-- Page Content -->
+<!-- Page Content >
 {% for post in site.posts reversed %}
     {% if post.category contains 'Publications'%}
       {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
@@ -27,7 +28,7 @@
             <!-- /.container -->
 
         </div>
-        <!-- /.content-section-a -->
+        <!-- /.content-section-a >
         {% else %}
 
         <div class="content-section-b">
@@ -53,9 +54,10 @@
             <!-- /.container -->
 
         </div>
-        <!-- /.content-section-b -->
+        <!-- /.content-section-b >
         {% endif %}
     {% endif %}
 {% endfor %}
 </section>
+-->
 
